--- a/Apendice1/Apendice1.tex
+++ b/Apendice1/Apendice1.tex
@@ -420,3 +420,9 @@ if(pantalla == 2){
 
 \end{verbatim}
 
+\section{Diagrama electrónico IBT-2}
+\begin{figure}[H]
+\centering
+\includegraphics[width=6cm]{Capitulo3/figs/ibt2.png}
+\caption{diagrama puente H}
+\end{figure}
