--- a/Capitulo2/marco_teorico.tex
+++ b/Capitulo2/marco_teorico.tex
@@ -10,9 +10,9 @@ Después de la construcción del primer acelerador, en la misma década de los
 30, se inventaron otros tipos de aceleradores tales como el ciclotrón, los
 aceleradores lineales y los aceleradores tipo Van de Graaff. Debido a que los
 primeros aceleradores de partículas se construyeron con el fin de estudiar
-experimentalmente la estructura del núcleo atómico, por medio de colisiones, las cuales podían originar transmutaciones o reacciones nucleares, esa fue la razón por lo que al hablar de un acelerador se asociaba automáticamente con un laboratorio de física nuclear. La importancia de estos instrumentos de física nuclear es similar a la del telescopio en astronomía o al microscopio en bacteriología.\\
+experimentalmente la estructura del núcleo atómico, por medio de colisiones, las cuales podían originar transmutaciones o reacciones nucleares, esa fue la razón por lo que al hablar de un acelerador se asociaba automáticamente con un laboratorio de física nuclear. La importancia de estos instrumentos de física nuclear es similar a la del telescopio en astronomía o al microscopio en bacteriología.\cite{C3}\\
 
-Actualmente el uso de los aceleradores se ha extendido a otras áreas de investigación básica como la física atómica el mundo de los electrones y en las partículas elementales. Los aceleradores en medicina se usan tanto en los departamentos de radiología, para destruir tumores malignos, como para producir radioisótopos que se utilizan en el diagnóstico de enfermedades (medicina nuclear). El uso de los aceleradores en aplicaciones tecnológicas es muy variado y el más conocido es en las industria de los semiconductores y de la núcleo-electrónica, las cuales se usan un tipo especial de aceleradores conocidos como implantadores con los que es posible producir los chips electrónicos, circuitos integrados, etc\\
+Actualmente el uso de los aceleradores se ha extendido a otras áreas de investigación básica como la física atómica el mundo de los electrones y en las partículas elementales. Los aceleradores en medicina se usan tanto en los departamentos de radiología, para destruir tumores malignos, como para producir radioisótopos que se utilizan en el diagnóstico de enfermedades (medicina nuclear). El uso de los aceleradores en aplicaciones tecnológicas es muy variado y el más conocido es en las industria de los semiconductores y de la núcleo-electrónica, las cuales se usan un tipo especial de aceleradores conocidos como implantadores con los que es posible producir los chips electrónicos, circuitos integrados, etc. \cite{C4}\\
 
 Los aceleradores son instrumentos relativamente complejos y su diseño y construcción requiere de alta tecnología e intervienen muchos campos de la ingeniería. Una forma de clasificar los aceleradores es por la energía de los proyectiles y los de alta energía o superaceleradorores están instalados, por ejemplo en algunos laboratorios nacionales de los EUA, tal como, en Los Alamos,
 BrookHaven, FermiLab y en Europa en el CERN. \\
@@ -31,7 +31,7 @@ esquemáticamente en la figura 2.1 y cuyos elementos básicos son:\\
 \centering
 \includegraphics[width=12cm]{capitulo2/figs/acelerador.png}
 \caption{Diagrama esquemático de las componentes principales de un acelerador de
-partículas.}
+partículas. \cite{c15}}
 \end{figure}
 
 El principio de funcionamiento de la mayoría de aceleradores, se basa en la
@@ -44,7 +44,7 @@ experimentación, etc.
 Un tubo de rayos X y el cinescopio de una TV  según la definición anterior son aceleradores de partículas, sin embargo, en la práctica no se les refiere con este nombre.\\
 
 Como se sabe, las unidades que se usan para la energía en física son los julios
-y/o ergios. Sin embargo, en el area de aceleradores, para cuantificar la energía de los proyectiles acelerados se acostumbra usar unidades de electrón-volt (eV)  o sus múltiples: el keV= 1 000 eV, el $MeV= 1 000 000 eV$, el TeV= $10^{12} eV$, etc. Una energía de 1 eV es el cambio de energía cinética que experimenta una partícula con carga en valor absoluto igual a la del electrón, después de pasar por una diferencia de potencial de un volt. \cite{const}
+y/o ergios. Sin embargo, en el área de aceleradores, para cuantificar la energía de los proyectiles acelerados se acostumbra usar unidades de electrón-volt (eV)  o sus múltiplos: el keV, el MeV, el TeV, etc. Una energía de 1 eV es el cambio de energía cinética que experimenta una partícula con carga en valor absoluto igual a la del electrón, después de pasar por una diferencia de potencial de un volt. \cite{const}
 
 \newpage
 
@@ -57,7 +57,7 @@ convertir la energía eléctrica alterna de la red, en energía alterna de otro 
 
 Los transformadores son maquinas eléctricas con dos devanados, en su forma mas básica. El devanado por donde entra energía al transformador se denomina primario y el devanado por donde sale energía hacia las cargas que son alimentadas por el transformador se denomina secundario. El devanado primario tiene $N_{1}$ espiras y el secundario tiene $N_{2}$ espiras. El circuito magnético de esta máquina lo constituye un núcleo magnético sin entrehierros, el cual no está realizado con hierro macizo sino con chapas de acero al silicio apiladas y aisladas entre sí. De esta manera se reducen las pérdidas magnéticas del transformador.\\
 
-Al inducir una corriente sobre cualquiera de los dos devanados se genera un flujo alterno en el núcleo magnético. Este flujo magnético se describe mediante la Ley de Faraday\cite{librotra} y produce una fuerza electromotriz que da lugar a una tensión $V_{2}$ en los bornes de dicho devanado.\\
+Al inducir una corriente sobre cualquiera de los dos devanados se genera un flujo alterno en el núcleo magnético. Este flujo magnético se describe mediante la Ley de Faraday y produce una fuerza electromotriz que da lugar a una tensión $V_{2}$ en los bornes de dicho devanado.\\
 
 Normalmente, para un transformador reductor o un transformador elevador tienen dos devanados que se denominan de alta tension y de baja tensión, siendo bobina primaria y bobina secundaria respectivamente. Un mismo transformador puede alimentarse por el lado alta tensión (A.T.) y funcionar como transformador reductor o alimentarse por el lado de baja tensión (B.T.) y actuar como un transformador elevador.
 
@@ -72,7 +72,7 @@ En la figura 2.6 podemos observar los símbolos mas comunes que representan al t
 \begin{figure}[H]
 \centering
 \includegraphics[width=7cm]{capitulo3/figs/simbolos.png}
-\caption{ Simbologia de un transformador monofásico.}
+\caption{ Simbología de un transformador monofásico.}
 \end{figure}
 
 Ahora podemos definir los valores asignados o nominales para el diseño de un transformador.\\
@@ -105,7 +105,7 @@ El circuito rectificador de onda completa genera una señal de corriente directa
 \caption{ Simbología de un transformador monofásico.}
 \end{figure}
 
-Para calcular el voltaje de D.C. que obtendremos podemos utilizar la siguiente ecuación\cite{rectificador}
+Para calcular el voltaje de corriente directa( $V_{m}$) que obtendremos podemos utilizar la siguiente ecuación.\cite{rectificador}
 
 
 \begin{equation}\label{eq:ej}
@@ -114,7 +114,7 @@ V_{cd}=2*0.636V_{m}
 
 En este caso se emplean cuatro diodos con la disposición como se ve en la figura 2.8. Al igual que antes, sólo son posibles dos estados de conducción, o bien los diodos 1 y 3 están en directa y conducen (tensión positiva) o por el contrario son los diodos 2 y 4 los que se encuentran en directa y conducen (tensión negativa).
 
-A diferencia del caso anterior, ahora la tensión máxima de salida es la del secundario del transformador (el doble de la del caso anterior), la misma que han de soportar los diodos en inversa, al igual que en el rectificador con dos diodos. Esta es la configuración usualmente empleada para la obtención de onda continua , que se rectifica.
+A diferencia del caso anterior, ahora la tensión máxima de salida es la del secundario del transformador (el doble de la del caso anterior), la misma que han de soportar los diodos en inversa, al igual que en el rectificador con dos diodos. Esta es la configuración usualmente empleada para la obtención de onda continua, que se rectifica.
 
 \begin{figure}[H]
 \centering
@@ -126,7 +126,7 @@ A diferencia del caso anterior, ahora la tensión máxima de salida es la del se
 \subsection{Filtros}
 El voltaje de CA por lo general se conecta a un transformador, el cual lo reduce al nivel de salida de DC deseado. Un rectificador de diodos proporciona entonces un voltaje rectificado de onda completa, el cual en principio se pasa por un filtro de capacitor sencillo para producir un voltaje de DC. El cual en todos los casos presenta un voltaje de rizo o variación de voltaje de CA. Para este proyecto se ha seleccionado dicho filtro por su facilidad de construcción. \\
 
-Para calcular el voltaje de rizo podemos utilizar un multimetro con capacidad de medir voltaje en CA (TRUE RMS) y el voltaje de DC. El voltimetro de CD leerá solo el nivel promedio. El medidor de CA (RMS) leerá solo el valor RMS del componente de ca del voltaje de salida. Entonces, definimos el rizo como:\\
+Para calcular el voltaje de rizo podemos utilizar un multimetro con capacidad de medir voltaje en CA (TRUE RMS) y el voltaje de DC. El voltimetro de CD leerá solo el nivel promedio. El medidor de CA (RMS) leerá solo el valor RMS del componente de ca del voltaje de salida, de esa manera podemos obtener$V_{cd}$ y $I_{cd}$. Entonces, definimos el rizo como:\\
 
 \begin{equation}
 r=\frac{voltaje\:  de\:  rizo\:  (rms)}{voltaje\:  de\:  DC}X100
@@ -144,13 +144,13 @@ r=\frac{voltaje\:  de\:  rizo\:  (rms)}{voltaje\:  de\:  DC}X100
 \caption{ Forma de onda de un voltaje filtrado que muestra voltajes de DC y de rizo.}
 \end{figure}
 
-Para nuestro caso utilizaremos un filtro de capacitor. Se conecta un capacitor en la salida del rectificador y se obtiene un voltaje de dc a través del capacitor como se muestra en la figura 2.8 y 2.9. Podemos calcular el \textbf{voltaje del rizo} que obtendremos mediante la ecuación:
+Para nuestro caso utilizaremos un filtro de capacitor. Se conecta un capacitor en la salida del rectificador a través del capacitor como se muestra en la figura 2.6 y 2.7. Podemos calcular el \textbf{voltaje del rizo} que obtendremos mediante la ecuación:
 
 \begin{equation}
 V_{r}(rms)=\dfrac{I_{cd}}{4\sqrt{3}fC}=\dfrac{2.4V_{cd}}{R_{L}C}
 \end{equation}
 
-Con la ecuación 2.4 podemos intuir y definir la expresion para el \textbf{rizo} de la forma de onda de salida de un rectificador de onda completa y el circuito de capacitor de filtrado:
+Donde $I_{cd}$ y $V_{cd}$ son la corriente y voltaje pico. Con la ecuación 2.4 podemos intuir y definir la expresion para el \textbf{rizo} de la forma de onda de salida de un rectificador de onda completa y el circuito de capacitor de filtrado:
 
 \begin{equation}
 r=\dfrac{V_{r}I_{cd}}{CV_{cd}}*100\%=\dfrac{2.4}{R_{L}C}
@@ -176,13 +176,19 @@ $$Regulaci\acute{o}n\:de\: voltaje = \dfrac{Voltaje\: sin \:carga \:-\: Voltaje\
 
 Los convertidores DC a AC se conocen como inversores. La función de un inversor es cambiar un voltaje de entrada de DC a un voltaje simétrico de salida de AC de magnitud y frecuencia deseada. \\
 
-Los inversores se pueden clasificar ampliamente en dos tipos: inversores monofásicos e inversores trifásicos. Cada tipo puede usar dispositivos de encendido y apagado controlados, por ejemplo por \textbf{transistores de unión bipolar} (BJT), \textbf{transistores de efecto de campo metal-óxido-semiconductor}(MOSFET), \textbf{transistores bipolares de puerta aislada} (IGBT), etc. Por lo general estos inversores utilizan señales de control de modulación por ancho de pulso  (PWM) para producir un voltaje de salida de CA.
+Los inversores se pueden clasificar ampliamente en dos tipos: inversores monofásicos e inversores trifásicos. Cada tipo puede usar dispositivos de encendido y apagado controlados, por ejemplo por transistores de unión bipolar (BJT), transistores de efecto de campo metal-óxido-semiconductor(MOSFET), transistores bipolares de puerta aislada (IGBT), etc. Por lo general estos inversores utilizan señales de control de modulación por ancho de pulso  (PWM) para producir un voltaje de salida de CA.
 
-Existen diferentes tipos de inversores, un inversor se conoce como \textbf{inversor alimentado por voltaje} (VFI) si el voltaje de entrada permanece constante; \textbf{inversor alimentado por corriente} (CFI) si el voltaje de entrada permanece constante, e \textbf{inversor enlazado en cd variable} si el voltaje de entrada es controlable. Si al voltaje o a la corriente de salida del inversor se le hace pasar a través de cero al crear un circuito LC resonante, a este tipo de inversores se le conoce como \textbf{inversor de pulso resonante}, y tiene vastas aplicaciones en la electrónica de potencia. \\
+Existen diferentes tipos de inversores, un inversor se conoce como inversor alimentado por voltaje (VFI) si el voltaje de entrada permanece constante; inversor alimentado por corriente (CFI) si la corriente de entrada permanece constante, e inversor enlazado en cd variable si el voltaje de entrada es controlable. Si al voltaje o a la corriente de salida del inversor se le hace pasar a través de cero al crear un circuito LC resonante, a este tipo de inversores se le conoce como inversor de pulso resonante, y tiene vastas aplicaciones en la electrónica de potencia. \\
 
 \subsection{Parámetros de desempeño de un inversor}
 
-El voltaje de entrada a un inversor es de DC y el voltaje de salida de AC. Idealmente la salida debe de ser una onda sinusoidal pura, pero contiene armónicos o rizos como se muestra en la figura 2.8. El inversor consume corriente de la fuente de entrada de DC solo cuando se conecta la carga al sistema, afectando la calidad de la señal de salida, es por ello que una medición variara conforme se conecte una carga diferente. Por lo común la calidad de un inversor se evalúa en función de parámetros de desempeño. \\
+El voltaje de entrada a un inversor es de DC y el voltaje de salida de AC. Idealmente la salida debe de ser una onda sinusoidal pura, pero contiene armónicos o rizos como se observa en la figura 2.8. El inversor consume corriente de la fuente de entrada de DC solo cuando se conecta la carga al sistema, afectando la calidad de la señal de salida, es por ello que una medición variará conforme se conecte una carga diferente. Por lo común la calidad de un inversor se evalúa en función de parámetros de desempeño. \\
+
+\begin{figure}[H]
+\centering
+\includegraphics[width=9cm]{capitulo2/figs/riso.png}
+\caption{ Reproducción del voltaje $V_{o}$ y el rizo $\delta$V en la carga del circuito.}
+\end{figure}
 
 La potencia de salida esta dada por: \begin{equation}
 P_{ca}=I_{0}V_{0}COS\theta
@@ -207,19 +213,12 @@ El contenido de rizo rms de la corriente de entrada es:
 I_{R}=\sqrt{I_{I}^{2}-I_{S}^{2}}
 \end{equation}
 
-donde $I_{I}$ e $I_{S}$ son los valores rms y promedio de la corriente de suministro de cd.
-El factor de rizo de la corriente de entrada es: 
-
-\begin{equation}
-RF_{s}=\dfrac{I_{r}}{I_{s}}
-\end{equation}
-
-La eficiencia de potencia, la cual es la relación de la potencia de salida a la potencia de entrada, dependerá de las perdidas por conmutación, que a su vez dependen de la frecuencia de conmutación del inversor.\\
+donde $I_{I}$ e $I_{S}$ son los valores rms y promedio de la corriente de suministro de corriente directa.
 
  
 \newpage
 \section{Multiplicador de voltaje Cockcroft-Walton}
-Cockroft-Walton es un multiplicador de voltaje desarrollado para fines nucleares \cite{CERN}. Este generador consiste en un arreglo en cascada de diodos y capacitores para generar alto voltaje en CD mediante una entrada de voltaje en CA. El sistema Cockoft-Walton es usado principalmente en aceleradores de partículas, pero también en sistemas láser, tubos CRT, LCDs, fuentes de voltaje y sistemas de rayos X. Podemos observar el sistema en cuestión en la figura 2.10.  
+Cockroft-Walton es un multiplicador de voltaje desarrollado para fines nucleares \cite{CERN}. Este generador consiste en un arreglo en cascada de diodos y capacitores para generar alto voltaje en CD mediante una entrada de voltaje en CA. El sistema Cockoft-Walton es usado principalmente en aceleradores de partículas, pero también en sistemas láser, tubos CRT, LCDs, fuentes de voltaje y sistemas de rayos X. Podemos observar el sistema en cuestión en la figura 2.9.  
 
 \begin{figure}[H]
 \centering
@@ -228,21 +227,14 @@ Cockroft-Walton es un multiplicador de voltaje desarrollado para fines nucleares
 \end{figure}
 El sistema multiplicador es bastante sencillo pero existen algunos temas imprescindibles los cuales tenemos que estudiar a profundidad, ya que el funcionamiento fundamental de un capacitor es la carga y descarga del mismo, es por ello que los parámetros del componente deben de ser calculados metódicamente.
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=9cm]{capitulo2/figs/riso.png}
-\caption{ Reproducción del voltaje $V_{o}$ y el rizo $\delta$V en la carga del circuito.}
-\end{figure}
 
 \begin{equation}
 \delta V=\frac{i}{fC}\frac{n(n+1)}{4}
 \end{equation}
 
-\begin{equation}
-V\approx 2nV-\frac{2n^{3}}{3fC}
-\end{equation}
 
-Es por ello que mediante un análisis matemático debemos de hacer el cálculo de la respectiva $\delta$ del mismo.\\
+
+Donde i es la corriente y n es el numero de etapa del multiplicador. Es por ello que mediante un análisis matemático debemos de hacer el cálculo de la respectiva $\delta$ del mismo.\\
 No solamente la calidad de la salida depende de lo antes mencionado, ya que, para un correcto funcionamiento necesitamos realizar un sistema de entrada estable y constante. De aquí el siguiente estudio.
 \newpage
 \section{Aplicaciones de fuentes de alto voltaje .}
@@ -277,7 +269,7 @@ través del campo.''\\
 \caption{ Inducción electromagnética 2.}
 \end{figure}
 
-En la figura 2.14 se aprecia la estructura básica de un transformador
+En la figura 2.12 se aprecia la estructura básica de un transformador
 de encendido. La corriente de la batería (12V) fluye por la bobina
 primaria y crea un campo magnético que se concentra en el
 núcleo y envuelve el secundario. Al interrumpirse la corriente
@@ -291,7 +283,7 @@ lo requiera el régimen del motor para el encendido de las bujías
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{capitulo3/figs/trans3.png}
-\caption{ Estructura básica de un transformador de encendido.}
+\caption{ Estructura básica de un transformador de encendido. \cite{ignicion}}
 \end{figure}
 
 El encendido electrónico es un concepto muy amplio pues existen
@@ -311,14 +303,14 @@ funcionamiento del motor. \cite{ignicion}
 
 El sistema de funcionamiento de un generador de rayos X tiene un funcionamiento relativamente básico.  El equipo recibe electricidad que puede ser de 220V a 440V, incidente en un transformador de baja tensión que es reductor y que baja el voltaje a 5 o 10 v, lo cual va a producir incandescencia del filamento, generando liberación de electrones. Estos electrones son centralizados por la copa centralizadora de Molibdeno, y que se quedan ahí, en el filamento de tungsteno, esperando. \\
 
-Cuando el equipo se dispara, con el cronorruptor, se activa el circuito de alta tensión que tiene un transformador amplificador, lo que genera un aumento de voltaje a 70Kv. Al ser tan grande la diferencia de potencial entre en ánodo y el cátodo va a generar una gran diferencia de potencial y los electrones salen disparados al ánodo. 
+Cuando el equipo se dispara, con el cronorruptor, se activa el circuito de alta tensión que tiene un transformador amplificador, lo que genera un aumento de voltaje a 70 KV. Al ser tan grande la diferencia de potencial entre en ánodo y el cátodo va a generar una diferencia de potencial y los electrones salen disparados al ánodo. 
 
 Los electrones se dirigen al ánodo y chocan contra una barra de tungsteno. Cuando se activa el circuito de baja tension, no se liberan los electrones; quedan en el filamento de tungsteno.\\
 
 \begin{figure}[H]
 \centering
 \includegraphics[width=12cm]{capitulo3/figs/rayos.png}
-\caption{ Tubo de rayos x}
+\caption{ Tubo de rayos x \cite{RADIO}}
 \end{figure}
 
 Las aplicaciones de estos tubos de rayos x son bastas y han sido un gran avance tecnológico para la humanidad. La generación de rayos x mediante voltaje tiene sus pros y sus contras respecto a generación de rayos x por isotopos radiactivos, ya que los tubos de rayos x pueden ser apagados cuando el equipo no esta operando, en cambio el isotopo radiactivo estará permanentemente irradiando, perdiendo intensidad con el pasar del tiempo.  \\
