--- a/Capitulo5/conclusiones.tex
+++ b/Capitulo5/conclusiones.tex
@@ -1,4 +1,4 @@
 \chapter{Conclusiones}
-Se logro la construcción satisfactoria de una fuente de alto voltaje controlada digitalmente mediante un computador y de forma manual mediante un microcontrolador integrado. Los voltajes máximos alcanzados fueron mas de 1KV, limitados por nuestros instrumentos de medición. Con una potencia de hasta 40W y un rizo en el orden de micro volts.\\
+Se logro la construcción satisfactoria de una fuente de alto voltaje controlada digitalmente mediante un computador y de forma manual mediante un microcontrolador integrado. Los voltajes máximos alcanzados fueron mas de 3.8KV, limitados por nuestros instrumentos de medición. Con una potencia de hasta 20W y un rizo bastante bajo.\\
 
-La caída de voltaje es el valor que representa el mayor problema en nuestro circuito, siendo necesario el desarrollo de una retroalimentación que ajuste el voltaje en tiempo real, reduciendo así dicha caída. Nuestro inversor y fuente de voltaje de CD fueron diseñados para soportar hasta 180W, así como tambien nuestro transformador de alto voltaje, por lo que el ajuste en potencia de esta retroalimentación se puede realizar digitalmente como futura continuación del proyecto.
+La caída de voltaje es el valor que representa el mayor problema en nuestro circuito, siendo necesario el desarrollo de una retroalimentación que ajuste el voltaje en tiempo real, reduciendo así dicha caída. Nuestro inversor y fuente de voltaje de CD fueron diseñados para soportar hasta 180W, así como también nuestro transformador de alto voltaje, por lo que el ajuste en potencia de esta retroalimentación se puede realizar digitalmente como futura continuación del proyecto.
