--- a/Capitulo1/introduccion.tex
+++ b/Capitulo1/introduccion.tex
@@ -20,27 +20,23 @@
 
 \chapter{Resumen} % section headings are printed smaller than chapter names
 
-El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje de bajo ruido para su uso en equipo científico de alta precisión, mediante la utilización  de un sistema de inversor de voltaje y un rectificador del tipo multiplicador, Cockcroft–Walton, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario. Durante el desarrollo del sistema de alto voltaje se realizo el diseño, la simulación, la fabricación y la validación de los datos proporcionados por el sistema.\\
+El trabajo de esta tesis consiste en el desarrollo de una fuente de alto voltaje de bajo ruido para su uso en aplicaciones de un acelerador de partículas lineal.  Esta fuente está basada en la topología de los sistemas Cockcroft Walton \cite{Cockcroft}, ademas incluyendo  un sistema de inversor de voltaje y un rectificador del tipo multiplicador, así como también la introducción a un control del sistema con lazo cerrado e interfaces gráficas para el usuario donde mediante un computador se tiene la posibilidad de un control automatizado y  del sistema en general. 
 
-Obteniendo como resultado un sistema de bajo costo, el cual puede generar alto voltaje a 10w de potencia, obteniendo una comparación entre fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia. \\
-
-Como resultado de esta tesis se muestra una comparación entre el diseño realizado y una fuente de alto voltaje comercial de la marca ``CAEN'' las cuales han sido sometidas a cargas similares a las utilizadas en laboratorios alrededor del mundo.\newpage
-
-
+Durante el desarrollo del sistema de alto voltaje se realizo el diseño del instrumento realizando una serie de simulaciones para encontrar el punto de operación optimo previo a la fabricación. Como resultado nuestro sisttema construido siguio fielmente los parametros de las simulaciones y puede generar alto voltaje a 10 W de potencia con un facror de ruido por debajo del 1$\%$, ademas se realizo una comparación con fuentes de alto voltaje comerciales implementadas en aceleradores de partículas y reactores nucleares de baja potencia.
 
 
 \section{Antecedentes y justificación}
 
 
-Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen grandes aplicaciones en las áreas médicas, militares y alimentarias. \cite{ProyectoLNLS5}. Los cuales aceleran los protones típicamente a energías de 40 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humana, he allí la meta en esta tesis.\\
+Uno de los mayores avances tecnológicos de la humanidad ha sido el desarrollo de aceleradores de partículas, ya que tienen aplicaciones en las áreas médicas, militares y alimentarias \cite{ProyectoLNLS5},\cite{neutrons1},\cite{leonard}. Los cuales aceleran los protones y electrones típicamente a energías de 10 MeV. Estos aceleradores son diseñados para funcionar de manera confiable produciendo haces de alta intensidad con un mínimo de intervención humana, he allí la meta en esta tesis.\\
 
-En el pasado la radioterapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo, la desventaja de este tipo de maquinaria es tener un funcionamiento ininterrumpido, con el pasar del tiempo su energía decae y es necesario cambiar la fuente radioactiva, resguardarla del medio ambiente, la cual representa un peligro para la humanidad y un problema sin solución actual, ya que la contaminación es latente.\\
+En el pasado la radioterapia utilizaba agujas de radio o rayos gamma de cobalto radioactivo\cite{cobalt}, la desventaja de este tipo de maquinaria es tener un funcionamiento ininterrumpido, con el pasar del tiempo su actividad decae y es necesario cambiar la fuente radioactiva, resguardarla del medio ambiente, pues esta representa un peligro para la poblacion y un problema es la acumulacion de estos materiales, ya que la contaminación es latente.\cite{C1}\\
 
-Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares) en el Centro Nuclear de Salazar, México. El trabajo con este acelerador, permitirá que el país se incorpore a una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. \\
+Otro de los tantos ejemplos de las aplicaciones de estas tecnologías es en la rama de la fusión nuclear, ya que estas requieren fuentes de alto voltaje para su funcionamiento, en Mexico existe desarrollo en esta área. En la parte experimental, en 1978 se inició un proyecto mexicano de fusión termonuclear y, en 1983, se propuso el diseño de una pequeña máquina experimental llamada “Novillo”\cite{novillo}. Este Tokamak fue diseñado y construido por trabajadores mexicanos del ININ (Instituto Nacional de Investigaciones Nucleares)\cite{inin} en el Centro Nuclear de Salazar, México. Este tipo de maquinas  permitio prticipar en una de las áreas de investigación en Física de Plasmas más prometedoras para el futuro energético. La infraestructura existente y la experiencia adquirida, permitirán contribuir al desarrollo de una futura aplicación de la energía nuclear de fusión, la cual será una fuente alterna de energía en el presente siglo. \\
 
 Bajo la premisa de la ventaja del desarrollo tecnológico de los aceleradores de partículas para nuestro país, es necesario comenzar los estudios en estos temas, ya que las posibilidades de aplicación son bastas y de suma importancia. Con el pasar del tiempo las aplicaciones han aumentado considerablemente, desde ramas de la medicina como ya lo mencionamos, hasta sistemas de aislamiento por campo magnético de plasmas y sistemas para aumentar temperaturas hasta puntos de fusión para sistemas de generación de energía en plantas de fusión nuclear, los mexicanos han apostado por la participación en el desarrollo de estas tecnologías.\\
 
-Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados con los ya antes mencionados, mediante el desarrollo de la instrumentación de una fuente de alto voltaje para un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo. La primera es el sistema de fuentes, nos hemos basado en el sistema Cockroft-Walton (CW) (1932) combinado con un inversor de voltaje de alta frecuencia incidente en un embobinado de ignición controlado digitalmente mediante un microcontrolador a lazo cerrado, el cual cuenta con una comunicación PC-HPS (HIGH POWER SUPPLY), permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \\
+Este trabajo de tesis pretende dar un pequeño acercamiento a temas relacionados con los ya antes mencionados, mediante el desarrollo de la instrumentación de una fuente de alto voltaje para un acelerador de electrones lineal, el cual se divide en varias etapas de desarrollo. La primera es el sistema de fuentes, nos hemos basado en el sistema Cockroft-Walton (CW) (1932) \cite{Cockcroft} combinado con un inversor de voltaje de alta frecuencia incidente en un embobinado de ignición controlado digitalmente mediante un microcontrolador a lazo cerrado, el cual cuenta con una comunicación PC-HPS (HIGH POWER SUPPLY por sus siglas en ingles), permitiendo al usuario, mediante una retroalimentación, configurar la fuente de voltaje a los parámetros deseados, así como también guardar un registro en las variaciones de corriente y voltaje a la que nuestra fuente es sometida. \cite{C2}\\
 \newpage
 
 
@@ -68,7 +64,7 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 
 
 \begin{itemize}
-\item Desarrollo de fuente de bajo voltaje.
+\item Desarrollar de fuente de bajo voltaje.
 \begin{itemize}
 \item Diseño de fuente de voltaje regulable a 180W.
 \item Simulación de fuente de voltaje regulable.
@@ -96,7 +92,7 @@ Este trabajo tiene por objetivo desarrollar una fuente de alto voltaje de hasta 
 \end{itemize}
 
 \subsection{Hipótesis}
-El diseño adecuado de un sistema de generación de alto voltaje regulable nos permite avanzar en el desarrollo de un acelerador de partículas lineal en nuestra universidad,con el cual se podrá desarrollar investigación y tecnología en dichos temas.
+El diseño adecuado de un sistema de generación de alto voltaje va a permitir el desarrollo de aplicaciones en aceleradores lineales. 
 
 \newpage
 
@@ -106,4 +102,4 @@ El diseño adecuado de un sistema de generación de alto voltaje regulable nos p
 
 \section{Estructura de la tesis}
 
-Este trabajo está dividido en 5 capítulos. El primero habla sobre un resumen del trabajo realizado, el segundo es un marco teórico que pone en contexto el desarrollo del proyecto y expone las partes técnicas, en el capítulo 3 se expone el proceso y la metodología realizada, el capítulo 4 incluye un breve análisis de resultados el cual muestra una síntesis de las mediciones y el trabajo teórico, y por ultimo un análisis de resultados. 
+Este trabajo está dividido en 5 capítulos. El primero habla sobre un resumen del trabajo realizado, el segundo es un marco teórico que pone en contexto el desarrollo del proyecto y expone las partes técnicas, en el capítulo 3 se expone el proceso y la metodología realizada, el capítulo 4 incluye un breve análisis de resultados el cual muestra una síntesis de las mediciones y el trabajo teórico, y por último un análisis de resultados. 
